SERVER-12939 prefer non-blocking sort plans when no plans produce or hit EOF